src/main/java/antlr/RulesParser.java
// Generated from E:/acady/Desktop/parsers/last/src/main/java/antlr\Rules.g4 by ANTLR 4.7.2
package antlr;

import java.util.*;
import grammar.Grammar;
import grammar.Rule;
import grammar.TokenDef;
import grammar.Option;
import grammar.atom.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, INT=15, TOKENNAME=16, 
		TYPE=17, NAME=18, DOTTEDNAME=19, WS=20, TOKEN=21, REGEX=22, CODE=23;
	public static final int
		RULE_start = 0, RULE_header = 1, RULE_skip = 2, RULE_keep = 3, RULE_tokensList = 4, 
		RULE_tokensListCont = 5, RULE_tokens_ = 6, RULE_token = 7, RULE_rules = 8, 
		RULE_rule_ = 9, RULE_ruleReturns = 10, RULE_ruleArgs = 11, RULE_typedArgs = 12, 
		RULE_typedArgsList = 13, RULE_ruleCases = 14, RULE_ruleCase = 15, RULE_ruleCaseTerms = 16, 
		RULE_ruleCaseTerm = 17, RULE_ruleInv = 18, RULE_tokenInv = 19, RULE_args = 20, 
		RULE_argsList = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "header", "skip", "keep", "tokensList", "tokensListCont", "tokens_", 
			"token", "rules", "rule_", "ruleReturns", "ruleArgs", "typedArgs", "typedArgsList", 
			"ruleCases", "ruleCase", "ruleCaseTerms", "ruleCaseTerm", "ruleInv", 
			"tokenInv", "args", "argsList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "';'", "'@header'", "'@skip'", "'('", "')'", "'@keepInTree'", 
			"','", "':'", "'returns'", "'['", "']'", "'|'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT", "TOKENNAME", "TYPE", "NAME", "DOTTEDNAME", "WS", 
			"TOKEN", "REGEX", "CODE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Rules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Grammar grammar;
		public Token TYPE;
		public HeaderContext header;
		public SkipContext skip;
		public KeepContext keep;
		public RulesContext rules;
		public Tokens_Context tokens_;
		public TerminalNode TYPE() { return getToken(RulesParser.TYPE, 0); }
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public SkipContext skip() {
			return getRuleContext(SkipContext.class,0);
		}
		public KeepContext keep() {
			return getRuleContext(KeepContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public Tokens_Context tokens_() {
			return getRuleContext(Tokens_Context.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(T__0);
			setState(45);
			((StartContext)_localctx).TYPE = match(TYPE);
			setState(46);
			match(T__1);
			setState(47);
			((StartContext)_localctx).header = header();
			setState(48);
			((StartContext)_localctx).skip = skip();
			setState(49);
			((StartContext)_localctx).keep = keep();
			setState(50);
			((StartContext)_localctx).rules = rules();
			setState(51);
			((StartContext)_localctx).tokens_ = tokens_();
			Collections.reverse(((StartContext)_localctx).tokens_.tokens); ((StartContext)_localctx).grammar =  new Grammar((((StartContext)_localctx).TYPE!=null?((StartContext)_localctx).TYPE.getText():null), ((StartContext)_localctx).header.code, ((StartContext)_localctx).rules.rules_, ((StartContext)_localctx).tokens_.tokens, ((StartContext)_localctx).skip.tokens, ((StartContext)_localctx).keep.tokenNames);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Code code;
		public Token CODE;
		public TerminalNode CODE() { return getToken(RulesParser.CODE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(T__2);
				setState(55);
				((HeaderContext)_localctx).CODE = match(CODE);
				((HeaderContext)_localctx).code =  new Code((((HeaderContext)_localctx).CODE!=null?((HeaderContext)_localctx).CODE.getText():null));
				}
				break;
			case EOF:
			case T__3:
			case T__6:
			case TOKENNAME:
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				((HeaderContext)_localctx).code =  new Code("");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkipContext extends ParserRuleContext {
		public List<TokenDef> tokens;
		public Tokens_Context tokens_;
		public Tokens_Context tokens_() {
			return getRuleContext(Tokens_Context.class,0);
		}
		public SkipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skip; }
	}

	public final SkipContext skip() throws RecognitionException {
		SkipContext _localctx = new SkipContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_skip);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				match(T__3);
				setState(61);
				match(T__4);
				setState(62);
				((SkipContext)_localctx).tokens_ = tokens_();
				setState(63);
				match(T__5);
				((SkipContext)_localctx).tokens =  ((SkipContext)_localctx).tokens_.tokens;
				}
				break;
			case EOF:
			case T__6:
			case TOKENNAME:
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				((SkipContext)_localctx).tokens =  new ArrayList<TokenDef>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeepContext extends ParserRuleContext {
		public Set<String> tokenNames;
		public TokensListContext tokensList;
		public TokensListContext tokensList() {
			return getRuleContext(TokensListContext.class,0);
		}
		public KeepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keep; }
	}

	public final KeepContext keep() throws RecognitionException {
		KeepContext _localctx = new KeepContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_keep);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				match(T__6);
				setState(70);
				match(T__4);
				setState(71);
				((KeepContext)_localctx).tokensList = tokensList();
				setState(72);
				match(T__5);
				((KeepContext)_localctx).tokenNames =  ((KeepContext)_localctx).tokensList.arguments;
				}
				break;
			case EOF:
			case TOKENNAME:
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				((KeepContext)_localctx).tokenNames =  new HashSet<>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokensListContext extends ParserRuleContext {
		public Set<String> arguments;
		public Token TOKENNAME;
		public TokensListContContext tokensListCont;
		public TerminalNode TOKENNAME() { return getToken(RulesParser.TOKENNAME, 0); }
		public TokensListContContext tokensListCont() {
			return getRuleContext(TokensListContContext.class,0);
		}
		public TokensListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokensList; }
	}

	public final TokensListContext tokensList() throws RecognitionException {
		TokensListContext _localctx = new TokensListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tokensList);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOKENNAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				((TokensListContext)_localctx).TOKENNAME = match(TOKENNAME);
				setState(79);
				((TokensListContext)_localctx).tokensListCont = tokensListCont();
				((TokensListContext)_localctx).arguments =  ((TokensListContext)_localctx).tokensListCont.arguments;
				                               _localctx.arguments.add((((TokensListContext)_localctx).TOKENNAME!=null?((TokensListContext)_localctx).TOKENNAME.getText():null));
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				((TokensListContext)_localctx).arguments =  new HashSet<>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokensListContContext extends ParserRuleContext {
		public Set<String> arguments;
		public Token TOKENNAME;
		public TokensListContContext tokensListCont;
		public TerminalNode TOKENNAME() { return getToken(RulesParser.TOKENNAME, 0); }
		public TokensListContContext tokensListCont() {
			return getRuleContext(TokensListContContext.class,0);
		}
		public TokensListContContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokensListCont; }
	}

	public final TokensListContContext tokensListCont() throws RecognitionException {
		TokensListContContext _localctx = new TokensListContContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tokensListCont);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(T__7);
				setState(86);
				((TokensListContContext)_localctx).TOKENNAME = match(TOKENNAME);
				setState(87);
				((TokensListContContext)_localctx).tokensListCont = tokensListCont();
				((TokensListContContext)_localctx).arguments =  ((TokensListContContext)_localctx).tokensListCont.arguments;
				                                        _localctx.arguments.add((((TokensListContContext)_localctx).TOKENNAME!=null?((TokensListContContext)_localctx).TOKENNAME.getText():null));
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				((TokensListContContext)_localctx).arguments =  new HashSet<>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tokens_Context extends ParserRuleContext {
		public List<TokenDef> tokens;
		public TokenContext token;
		public Tokens_Context tokens_;
		public TokenContext token() {
			return getRuleContext(TokenContext.class,0);
		}
		public Tokens_Context tokens_() {
			return getRuleContext(Tokens_Context.class,0);
		}
		public Tokens_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokens_; }
	}

	public final Tokens_Context tokens_() throws RecognitionException {
		Tokens_Context _localctx = new Tokens_Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_tokens_);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOKENNAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				((Tokens_Context)_localctx).token = token();
				setState(94);
				match(T__1);
				setState(95);
				((Tokens_Context)_localctx).tokens_ = tokens_();
				((Tokens_Context)_localctx).tokens =  ((Tokens_Context)_localctx).tokens_.tokens;
				                          _localctx.tokens.add(((Tokens_Context)_localctx).token.token_);
				}
				break;
			case EOF:
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				((Tokens_Context)_localctx).tokens =  new ArrayList<TokenDef>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokenContext extends ParserRuleContext {
		public TokenDef token_;
		public Token TOKENNAME;
		public Token REGEX;
		public TerminalNode TOKENNAME() { return getToken(RulesParser.TOKENNAME, 0); }
		public TerminalNode REGEX() { return getToken(RulesParser.REGEX, 0); }
		public TokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_token; }
	}

	public final TokenContext token() throws RecognitionException {
		TokenContext _localctx = new TokenContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_token);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((TokenContext)_localctx).TOKENNAME = match(TOKENNAME);
			setState(102);
			match(T__8);
			setState(103);
			((TokenContext)_localctx).REGEX = match(REGEX);
			((TokenContext)_localctx).token_ =  new TokenDef((((TokenContext)_localctx).TOKENNAME!=null?((TokenContext)_localctx).TOKENNAME.getText():null), (((TokenContext)_localctx).REGEX!=null?((TokenContext)_localctx).REGEX.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public List<Rule> rules_;
		public Rule_Context rule_;
		public RulesContext rules;
		public Rule_Context rule_() {
			return getRuleContext(Rule_Context.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rules);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				((RulesContext)_localctx).rule_ = rule_();
				setState(107);
				match(T__1);
				setState(108);
				((RulesContext)_localctx).rules = rules();
				((RulesContext)_localctx).rules_ =  ((RulesContext)_localctx).rules.rules_;
				                      _localctx.rules_.add(((RulesContext)_localctx).rule_.rule);
				}
				break;
			case EOF:
			case TOKENNAME:
				enterOuterAlt(_localctx, 2);
				{
				((RulesContext)_localctx).rules_ =  new ArrayList<Rule>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_Context extends ParserRuleContext {
		public Rule rule;
		public Token NAME;
		public RuleArgsContext ruleArgs;
		public RuleReturnsContext ruleReturns;
		public RuleCaseContext ruleCase;
		public RuleCasesContext ruleCases;
		public TerminalNode NAME() { return getToken(RulesParser.NAME, 0); }
		public RuleArgsContext ruleArgs() {
			return getRuleContext(RuleArgsContext.class,0);
		}
		public RuleReturnsContext ruleReturns() {
			return getRuleContext(RuleReturnsContext.class,0);
		}
		public RuleCaseContext ruleCase() {
			return getRuleContext(RuleCaseContext.class,0);
		}
		public RuleCasesContext ruleCases() {
			return getRuleContext(RuleCasesContext.class,0);
		}
		public Rule_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_; }
	}

	public final Rule_Context rule_() throws RecognitionException {
		Rule_Context _localctx = new Rule_Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_rule_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((Rule_Context)_localctx).NAME = match(NAME);
			setState(115);
			((Rule_Context)_localctx).ruleArgs = ruleArgs();
			setState(116);
			((Rule_Context)_localctx).ruleReturns = ruleReturns();
			setState(117);
			match(T__8);
			setState(118);
			((Rule_Context)_localctx).ruleCase = ruleCase();
			setState(119);
			((Rule_Context)_localctx).ruleCases = ruleCases();
			((Rule_Context)_localctx).ruleCases.options.add(new Option(((Rule_Context)_localctx).ruleCase.options));
			    ((Rule_Context)_localctx).rule =  new Rule((((Rule_Context)_localctx).NAME!=null?((Rule_Context)_localctx).NAME.getText():null), ((Rule_Context)_localctx).ruleArgs.arguments, ((Rule_Context)_localctx).ruleReturns.ret, ((Rule_Context)_localctx).ruleCases.options);
			   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleReturnsContext extends ParserRuleContext {
		public Rule.Argument ret;
		public Token TYPE;
		public Token NAME;
		public TerminalNode TYPE() { return getToken(RulesParser.TYPE, 0); }
		public TerminalNode NAME() { return getToken(RulesParser.NAME, 0); }
		public RuleReturnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleReturns; }
	}

	public final RuleReturnsContext ruleReturns() throws RecognitionException {
		RuleReturnsContext _localctx = new RuleReturnsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ruleReturns);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(T__9);
				setState(123);
				match(T__10);
				setState(124);
				((RuleReturnsContext)_localctx).TYPE = match(TYPE);
				setState(125);
				((RuleReturnsContext)_localctx).NAME = match(NAME);
				setState(126);
				match(T__11);
				((RuleReturnsContext)_localctx).ret =  new Rule.Argument((((RuleReturnsContext)_localctx).TYPE!=null?((RuleReturnsContext)_localctx).TYPE.getText():null), (((RuleReturnsContext)_localctx).NAME!=null?((RuleReturnsContext)_localctx).NAME.getText():null));
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				((RuleReturnsContext)_localctx).ret =  null;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleArgsContext extends ParserRuleContext {
		public List<Rule.Argument> arguments;
		public TypedArgsContext typedArgs;
		public TypedArgsContext typedArgs() {
			return getRuleContext(TypedArgsContext.class,0);
		}
		public RuleArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleArgs; }
	}

	public final RuleArgsContext ruleArgs() throws RecognitionException {
		RuleArgsContext _localctx = new RuleArgsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ruleArgs);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(T__10);
				setState(132);
				((RuleArgsContext)_localctx).typedArgs = typedArgs();
				setState(133);
				match(T__11);
				((RuleArgsContext)_localctx).arguments =  ((RuleArgsContext)_localctx).typedArgs.arguments;
				}
				break;
			case T__8:
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				((RuleArgsContext)_localctx).arguments =  new ArrayList<Rule.Argument>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedArgsContext extends ParserRuleContext {
		public List<Rule.Argument> arguments;
		public Token TYPE;
		public Token NAME;
		public TypedArgsListContext typedArgsList;
		public TerminalNode TYPE() { return getToken(RulesParser.TYPE, 0); }
		public TerminalNode NAME() { return getToken(RulesParser.NAME, 0); }
		public TypedArgsListContext typedArgsList() {
			return getRuleContext(TypedArgsListContext.class,0);
		}
		public TypedArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedArgs; }
	}

	public final TypedArgsContext typedArgs() throws RecognitionException {
		TypedArgsContext _localctx = new TypedArgsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_typedArgs);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				((TypedArgsContext)_localctx).TYPE = match(TYPE);
				setState(140);
				((TypedArgsContext)_localctx).NAME = match(NAME);
				setState(141);
				((TypedArgsContext)_localctx).typedArgsList = typedArgsList();
				((TypedArgsContext)_localctx).arguments =  ((TypedArgsContext)_localctx).typedArgsList.arguments;
				                                       _localctx.arguments.add(new Rule.Argument((((TypedArgsContext)_localctx).TYPE!=null?((TypedArgsContext)_localctx).TYPE.getText():null), (((TypedArgsContext)_localctx).NAME!=null?((TypedArgsContext)_localctx).NAME.getText():null)));
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				((TypedArgsContext)_localctx).arguments =  new ArrayList<Rule.Argument>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedArgsListContext extends ParserRuleContext {
		public List<Rule.Argument> arguments;
		public Token TYPE;
		public Token NAME;
		public TypedArgsListContext typedArgsList;
		public TerminalNode TYPE() { return getToken(RulesParser.TYPE, 0); }
		public TerminalNode NAME() { return getToken(RulesParser.NAME, 0); }
		public TypedArgsListContext typedArgsList() {
			return getRuleContext(TypedArgsListContext.class,0);
		}
		public TypedArgsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedArgsList; }
	}
